samples/_failures_safe/1761789405_d8e725_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cc7c82c6.c: In function ‘next_token’:
./samples/SAFE/__tmp_cc7c82c6.c:148:9: error: expected declaration or statement at end of input
  148 |         }
      |         ^
./samples/SAFE/__tmp_cc7c82c6.c:148:9: error: expected declaration or statement at end of input
